Set-up full bibliography, assorted word-smithing.

--- a/trunk/doc/common/project.bib
+++ b/trunk/doc/common/project.bib
@@ -1,8 +1,84 @@
+@MISC
+{
+    Authd2002, 
+    AUTHOR = "Authd home page",
+    TITLE  = "http://www.cs.berkeley.edu/\~bnc/authd/",
+    INSTITUTION = "UC Berkeley",
+    YEAR        = 2002,
+}
+
+@MISC
+{
+    BlueGene2002, 
+    AUTHOR = "LLNL BlueGene/L home page",
+    TITLE  = "http://www.llnl.gov/asci/platforms/bluegenel",
+    INSTITUTION = "LLNL",
+    YEAR        = 2002,
+}
+
+@MISC
+{
+    DPCS2002, 
+    AUTHOR = "DPCS overview",
+    TITLE  = "http://www.llnl.gov/icc/lc/dpcs/dpcs\_overview.html",
+    INSTITUTION = "LLNL",
+    YEAR        = 2002,
+}
+
+@MISC
+{
+    Etnus2002, 
+    AUTHOR = "Etnus home page",
+    TITLE  = "http://www.etnus.com",
+    INSTITUTION = "Etnus",
+    YEAR        = 2002,
+}
+
+@MISC
+{
+    Globus2002, 
+    AUTHOR = "Globus home page",
+    TITLE  = "http://www.globus.org",
+    INSTITUTION = "U Chicago",
+    YEAR        = 2002,
+}
+
+@CONFERENCE
+{
+    Jackson2001, 
+    AUTHOR = "David Jackson and Quinn Snell and Mark Clement",
+    TITLE  = "Core Algorithms of the Maui Scheduler",
+    BOOKTITLE = "Job Scheduling Stategies for Parallel Processing",
+    YEAR      = 2002,
+    VOLUME = "LLCS 2221",
+    PUBLISHER = "Springer Verlag",
+    PAGES = "87-102",
+    EDITOR = "Dror Feitelson and Larry Rudolph",
+}
+
 @TECHREPORT
 {
     Jette2002, 
-    AUTHOR = "Moe Jette et al",
+    AUTHOR = "Moe Jette and others",
     TITLE  = "Survey of Batch/Resource Management-Related System Software",
     INSTITUTION = "LLNL",
     YEAR        = 2002,
+}
+
+@MISC
+{
+    Maui2002, 
+    AUTHOR = "Maui scheduler repository",
+    TITLE  = "http://mauischeduler.sourceforge.net/",
+    INSTITUTION = "SourceForge",
+    YEAR        = 2002,
+}
+
+@CONFERENCE
+{
+    STORM2001, 
+    AUTHOR = "Eitan Frachtenberg and Fabrizio Petrini and others",
+    TITLE  = "STORM: Lightning-Fast Resource Management",
+    BOOKTITLE = "SuperComputing 2002",
+    YEAR      = 2002,
 }
