Add  acknowledgement for Jay.

--- a/trunk/doc/pubdesign/report.tex
+++ b/trunk/doc/pubdesign/report.tex
@@ -1385,10 +1385,11 @@ infrastructure and user tools
 technical guidance
 \item Gregg Hommes, Bob Wood and Phil Eckert for their help designing the 
 SLURM APIs
-\item David Jackson for technical guidance
+\item David Jackson of Linux Networx for technical guidance
 \item Fabrizio Petrini of Los Alamos National Laboratory for his work to 
 integrate SLURM with STORM communications 
 \item Mark Seager and Greg Tomaschke for their support of this project
+\item Jay Windly of Linux Networx for his work on the security components
 \end{itemize}
 
 \appendix
