--- a/trunk/doc/common/project.bib
+++ b/trunk/doc/common/project.bib
@@ -3,8 +3,6 @@
     Authd2002, 
     AUTHOR = "Authd home page",
     TITLE  = "http://www.cs.berkeley.edu/\~bnc/authd/",
-    INSTITUTION = "UC Berkeley",
-    YEAR        = 2002,
 }
 
 @MISC
@@ -12,8 +10,6 @@
     BlueGene2002, 
     AUTHOR = "LLNL BlueGene/L home page",
     TITLE  = "http://www.llnl.gov/asci/platforms/bluegenel",
-    INSTITUTION = "LLNL",
-    YEAR        = 2002,
 }
 
 @MISC
@@ -21,8 +17,6 @@
     DPCS2002, 
     AUTHOR = "DPCS overview",
     TITLE  = "http://www.llnl.gov/icc/lc/dpcs/dpcs\_overview.html",
-    INSTITUTION = "LLNL",
-    YEAR        = 2002,
 }
 
 @MISC
@@ -30,8 +24,6 @@
     Etnus2002, 
     AUTHOR = "Etnus home page",
     TITLE  = "http://www.etnus.com",
-    INSTITUTION = "Etnus",
-    YEAR        = 2002,
 }
 
 @MISC
@@ -39,8 +31,6 @@
     Globus2002, 
     AUTHOR = "Globus home page",
     TITLE  = "http://www.globus.org",
-    INSTITUTION = "U Chicago",
-    YEAR        = 2002,
 }
 
 @CONFERENCE
@@ -70,8 +60,6 @@
     Maui2002, 
     AUTHOR = "Maui scheduler repository",
     TITLE  = "http://mauischeduler.sourceforge.net/",
-    INSTITUTION = "SourceForge",
-    YEAR        = 2002,
 }
 
 @CONFERENCE
@@ -79,6 +67,6 @@
     STORM2001, 
     AUTHOR = "Eitan Frachtenberg and Fabrizio Petrini and others",
     TITLE  = "STORM: Lightning-Fast Resource Management",
-    BOOKTITLE = "SuperComputing 2002",
+    BOOKTITLE = "Proceedings of SuperComputing",
     YEAR      = 2002,
 }
